--- a/ShopGo/Create Account/CreateAccount.storyboard
+++ b/ShopGo/Create Account/CreateAccount.storyboard
@@ -26,13 +26,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Uj-cv-Veh">
-                                <rect key="frame" x="0.0" y="104.66666666666669" width="430" height="827.33333333333326"/>
+                                <rect key="frame" x="0.0" y="113" width="430" height="819"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GWD-sL-gpB">
-                                        <rect key="frame" x="36" y="387.66666666666663" width="358" height="68"/>
+                                        <rect key="frame" x="36" y="387.66666666666669" width="358" height="68"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5OI-OE-gA9">
-                                                <rect key="frame" x="8" y="21.000000000000057" width="37" height="26"/>
+                                                <rect key="frame" x="8" y="20.999999999999943" width="37" height="26"/>
                                                 <color key="tintColor" red="0.66274509800000003" green="0.66274509800000003" blue="0.66274509800000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="37" id="ids-3L-wBh"/>
@@ -40,9 +40,8 @@
                                                 </constraints>
                                             </imageView>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="**************" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ech-oG-S1f">
-                                                <rect key="frame" x="92" y="25.000000000000057" width="229" height="18"/>
+                                                <rect key="frame" x="92" y="24.999999999999943" width="266" height="18"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="229" id="Qmt-qu-a18"/>
                                                     <constraint firstAttribute="height" constant="18" id="Xf5-1L-M42"/>
                                                 </constraints>
                                                 <color key="textColor" red="0.66274509800000003" green="0.66274509800000003" blue="0.66274509800000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -56,7 +55,7 @@
                                             <constraint firstAttribute="bottom" secondItem="ech-oG-S1f" secondAttribute="bottom" constant="25" id="CnI-ag-np9"/>
                                             <constraint firstItem="5OI-OE-gA9" firstAttribute="top" secondItem="GWD-sL-gpB" secondAttribute="top" constant="20" symbolic="YES" id="Cw9-Jf-EIW"/>
                                             <constraint firstAttribute="bottom" secondItem="5OI-OE-gA9" secondAttribute="bottom" constant="20" symbolic="YES" id="GyD-vF-fQp"/>
-                                            <constraint firstAttribute="trailing" secondItem="ech-oG-S1f" secondAttribute="trailing" id="fyj-X6-EyA"/>
+                                            <constraint firstAttribute="trailing" secondItem="ech-oG-S1f" secondAttribute="trailing" id="eh7-gB-brs"/>
                                             <constraint firstItem="ech-oG-S1f" firstAttribute="top" secondItem="GWD-sL-gpB" secondAttribute="top" constant="25" id="lbL-Xd-yJb"/>
                                             <constraint firstItem="ech-oG-S1f" firstAttribute="leading" secondItem="5OI-OE-gA9" secondAttribute="trailing" constant="47" id="llr-Vy-f4a"/>
                                         </constraints>
@@ -149,7 +148,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tDL-V9-XOT">
-                                        <rect key="frame" x="36" y="87.999999999999986" width="358" height="54.000000000000014"/>
+                                        <rect key="frame" x="36" y="88" width="358" height="54"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ARt-uR-cMX">
                                                 <rect key="frame" x="106" y="16" width="244" height="29"/>
@@ -178,13 +177,13 @@
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GHS-sf-Tfv">
-                                        <rect key="frame" x="36" y="49.999999999999986" width="358" height="24"/>
+                                        <rect key="frame" x="36" y="50" width="358" height="24"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Do-pM-fcC">
-                                        <rect key="frame" x="0.0" y="624" width="430" height="153.33333333333337"/>
+                                        <rect key="frame" x="0.0" y="624" width="430" height="145"/>
                                         <color key="tintColor" red="0.23921568627450979" green="0.26666666666666666" blue="0.63921568627450975" alpha="1" colorSpace="calibratedRGB"/>
                                         <buttonConfiguration key="configuration" style="plain" subtitle="Log in" titlePadding="4" titleAlignment="center">
                                             <attributedString key="attributedTitle">
@@ -205,6 +204,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZSz-ZO-fqJ" customClass="CustomButton" customModule="ShopGo" customModuleProvider="target">
                                         <rect key="frame" x="36" y="502" width="358" height="55"/>
                                         <constraints>
+                                            <constraint firstAttribute="width" constant="358" id="2CA-WL-i2J"/>
                                             <constraint firstAttribute="height" constant="55" id="OJi-Br-Mxh"/>
                                         </constraints>
                                         <color key="tintColor" red="0.23921568630000001" green="0.2666666667" blue="0.6470588235294118" alpha="1" colorSpace="calibratedRGB"/>
@@ -235,16 +235,15 @@
                                     <constraint firstItem="ZSz-ZO-fqJ" firstAttribute="top" secondItem="uet-O6-ocR" secondAttribute="top" constant="150" id="M1h-tG-yqg"/>
                                     <constraint firstItem="AXP-Cz-8DB" firstAttribute="top" secondItem="4Uj-cv-Veh" secondAttribute="top" constant="157" id="MlZ-wC-u3m"/>
                                     <constraint firstAttribute="trailing" secondItem="uet-O6-ocR" secondAttribute="trailing" constant="36" id="NT2-E8-9lb"/>
+                                    <constraint firstAttribute="trailing" secondItem="GWD-sL-gpB" secondAttribute="trailing" constant="36" id="PXW-I0-NsW"/>
                                     <constraint firstItem="GHS-sf-Tfv" firstAttribute="top" secondItem="4Uj-cv-Veh" secondAttribute="top" constant="50" id="R6l-0O-Piu"/>
                                     <constraint firstItem="GWD-sL-gpB" firstAttribute="top" secondItem="uet-O6-ocR" secondAttribute="bottom" constant="14" id="R8i-Zp-Uw4"/>
                                     <constraint firstItem="MOr-Kt-3qF" firstAttribute="top" secondItem="BfQ-tR-CMV" secondAttribute="bottom" constant="15" id="UdR-Di-TJg"/>
                                     <constraint firstAttribute="trailing" secondItem="AXP-Cz-8DB" secondAttribute="trailing" constant="36" id="V2L-uT-ke1"/>
                                     <constraint firstItem="MOr-Kt-3qF" firstAttribute="leading" secondItem="4Uj-cv-Veh" secondAttribute="leading" constant="36" id="Ysr-TC-kSb"/>
-                                    <constraint firstItem="ZSz-ZO-fqJ" firstAttribute="trailing" secondItem="GWD-sL-gpB" secondAttribute="trailing" id="d9P-eT-Lkh"/>
                                     <constraint firstItem="GHS-sf-Tfv" firstAttribute="leading" secondItem="4Uj-cv-Veh" secondAttribute="leading" constant="36" id="jxP-lE-HFX"/>
                                     <constraint firstAttribute="trailing" secondItem="tDL-V9-XOT" secondAttribute="trailing" constant="36" id="kk0-f7-UMo"/>
                                     <constraint firstAttribute="trailing" secondItem="1Do-pM-fcC" secondAttribute="trailing" id="lfi-4q-JDh"/>
-                                    <constraint firstAttribute="trailing" secondItem="GWD-sL-gpB" secondAttribute="trailing" constant="36" id="nDk-ik-thA"/>
                                     <constraint firstItem="tDL-V9-XOT" firstAttribute="top" secondItem="GHS-sf-Tfv" secondAttribute="bottom" constant="14" id="oZI-FX-oW1"/>
                                     <constraint firstItem="AXP-Cz-8DB" firstAttribute="leading" secondItem="4Uj-cv-Veh" secondAttribute="leading" constant="36" id="sZf-ih-BWY"/>
                                     <constraint firstAttribute="trailing" secondItem="MOr-Kt-3qF" secondAttribute="trailing" constant="36" id="stM-4i-ufJ"/>
@@ -262,10 +261,13 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="4Uj-cv-Veh" firstAttribute="top" secondItem="8qi-HW-y0h" secondAttribute="bottom" constant="8.3300000000000001" id="6op-01-Jn2"/>
                             <constraint firstItem="4Uj-cv-Veh" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="6t4-Nk-4l4"/>
+                            <constraint firstItem="4Uj-cv-Veh" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="E9g-Uh-nPI"/>
                             <constraint firstItem="8qi-HW-y0h" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="GDI-KZ-h02"/>
-                            <constraint firstItem="4Uj-cv-Veh" firstAttribute="top" secondItem="8qi-HW-y0h" secondAttribute="bottom" id="QzS-1C-vWd"/>
+                            <constraint firstItem="4Uj-cv-Veh" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="U8g-xq-J2O"/>
                             <constraint firstItem="8qi-HW-y0h" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="cEj-dC-JwE"/>
+                            <constraint firstItem="4Uj-cv-Veh" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="eqo-vs-JmQ"/>
                             <constraint firstAttribute="bottom" secondItem="4Uj-cv-Veh" secondAttribute="bottom" id="jbV-jQ-8Um"/>
                             <constraint firstItem="4Uj-cv-Veh" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="vTR-4n-fWa"/>
                             <constraint firstItem="8qi-HW-y0h" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="yb5-9A-NVg"/>
@@ -277,7 +279,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="116.79389312977099" y="3.5211267605633805"/>
+            <point key="canvasLocation" x="115.81395348837209" y="3.218884120171674"/>
         </scene>
     </scenes>
     <resources>
