--- a/ShopGo/LoginScreen/LoginScreen.storyboard
+++ b/ShopGo/LoginScreen/LoginScreen.storyboard
@@ -12,7 +12,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="LoginVC" id="BYZ-38-t0r" customClass="LoginViewController" customModule="ShopGo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="ShopGo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -34,12 +34,12 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FvT-Ed-jsy">
-                                <rect key="frame" x="50.000000000000014" y="304" width="177.33333333333337" height="27.666666666666686"/>
+                                <rect key="frame" x="49.999999999999986" y="304" width="156.66666666666663" height="27.666666666666686"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WMP-VF-t6K">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WMP-VF-t6K">
                                 <rect key="frame" x="50" y="341.66666666666669" width="330" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="Fwb-IE-2Ne"/>
@@ -48,18 +48,18 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sqk-yb-DgR">
-                                <rect key="frame" x="50.000000000000014" y="394" width="177.33333333333337" height="27.666666666666686"/>
+                                <rect key="frame" x="49.999999999999986" y="394" width="156.66666666666663" height="27.666666666666686"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yBh-dU-laB">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yBh-dU-laB">
                                 <rect key="frame" x="50" y="431.66666666666669" width="330" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pWS-2h-OhE" customClass="CustomButton" customModule="ShopGo" customModuleProvider="target">
-                                <rect key="frame" x="80" y="560.33333333333337" width="270" height="45"/>
+                                <rect key="frame" x="80" y="556.66666666666663" width="270" height="45"/>
                                 <color key="backgroundColor" name="ButtonColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="270" id="fqE-nd-EMx"/>
@@ -74,7 +74,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="44" translatesAutoresizingMaskIntoConstraints="NO" id="3Vo-b0-m6C">
-                                <rect key="frame" x="96" y="714" width="238" height="50"/>
+                                <rect key="frame" x="96" y="710.33333333333337" width="238" height="50"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fb" translatesAutoresizingMaskIntoConstraints="NO" id="Oi9-r4-zlo">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -99,16 +99,16 @@
                                     </imageView>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot password?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GNW-TZ-oEu">
-                                <rect key="frame" x="50.000000000000014" y="482.66666666666669" width="177.33333333333337" height="27.666666666666686"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⸻ Log in with ⸻" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JLa-O3-SM0">
+                                <rect key="frame" x="80" y="651.66666666666663" width="270" height="28.666666666666629"/>
+                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
                                 <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⸻ Log in with ⸻" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JLa-O3-SM0">
-                                <rect key="frame" x="80" y="655.33333333333337" width="270" height="28.666666666666629"/>
-                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot password?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Fv-Nm-HW2">
+                                <rect key="frame" x="49.999999999999986" y="482.66666666666669" width="156.66666666666663" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -119,29 +119,29 @@
                             <constraint firstItem="5V6-PN-1AZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0x9-5g-Nxn"/>
                             <constraint firstItem="WMP-VF-t6K" firstAttribute="trailing" secondItem="yBh-dU-laB" secondAttribute="trailing" id="12Z-1Z-2KK"/>
                             <constraint firstItem="3Vo-b0-m6C" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6Nd-Od-Dl3"/>
+                            <constraint firstItem="9Fv-Nm-HW2" firstAttribute="leading" secondItem="sqk-yb-DgR" secondAttribute="leading" id="Aih-dD-cji"/>
                             <constraint firstItem="WMP-VF-t6K" firstAttribute="centerX" secondItem="5V6-PN-1AZ" secondAttribute="centerX" id="Cya-oJ-Clv"/>
                             <constraint firstItem="yBh-dU-laB" firstAttribute="top" secondItem="WMP-VF-t6K" secondAttribute="bottom" constant="45" id="Dsf-q4-YIn"/>
                             <constraint firstItem="sqk-yb-DgR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="50" id="Fbz-wE-m8I"/>
                             <constraint firstItem="5V6-PN-1AZ" firstAttribute="top" secondItem="zpC-oC-RGG" secondAttribute="bottom" constant="50" id="Fq9-8e-pL9"/>
                             <constraint firstItem="FvT-Ed-jsy" firstAttribute="centerX" secondItem="sqk-yb-DgR" secondAttribute="centerX" id="GZQ-0X-Cqb"/>
                             <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="FvT-Ed-jsy" secondAttribute="trailing" constant="30" id="HNm-6x-7Lp"/>
+                            <constraint firstItem="9Fv-Nm-HW2" firstAttribute="top" secondItem="yBh-dU-laB" secondAttribute="bottom" constant="10" id="Hg2-Dz-mU5"/>
                             <constraint firstItem="3Vo-b0-m6C" firstAttribute="top" secondItem="JLa-O3-SM0" secondAttribute="bottom" constant="30" id="KS9-TL-zX5"/>
                             <constraint firstItem="JLa-O3-SM0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="MBT-qc-sIw"/>
-                            <constraint firstItem="GNW-TZ-oEu" firstAttribute="trailing" secondItem="sqk-yb-DgR" secondAttribute="trailing" id="Qdy-wn-tST"/>
+                            <constraint firstItem="9Fv-Nm-HW2" firstAttribute="trailing" secondItem="sqk-yb-DgR" secondAttribute="trailing" id="MI0-2d-Iiw"/>
                             <constraint firstItem="JLa-O3-SM0" firstAttribute="leading" secondItem="pWS-2h-OhE" secondAttribute="leading" id="VYr-eq-z21"/>
+                            <constraint firstItem="pWS-2h-OhE" firstAttribute="top" secondItem="9Fv-Nm-HW2" secondAttribute="bottom" constant="50" id="Xez-S1-ncN"/>
                             <constraint firstItem="JLa-O3-SM0" firstAttribute="top" secondItem="pWS-2h-OhE" secondAttribute="bottom" constant="50" id="YPe-lJ-zbH"/>
                             <constraint firstItem="zpC-oC-RGG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Z4R-Ry-MKs"/>
                             <constraint firstItem="FvT-Ed-jsy" firstAttribute="leading" secondItem="sqk-yb-DgR" secondAttribute="leading" id="adM-WX-ame"/>
                             <constraint firstItem="FvT-Ed-jsy" firstAttribute="trailing" secondItem="sqk-yb-DgR" secondAttribute="trailing" id="cIG-1b-oKD"/>
                             <constraint firstItem="WMP-VF-t6K" firstAttribute="leading" secondItem="yBh-dU-laB" secondAttribute="leading" id="fyB-gR-pAh"/>
                             <constraint firstItem="pWS-2h-OhE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gxF-8U-iuY"/>
-                            <constraint firstItem="pWS-2h-OhE" firstAttribute="top" secondItem="GNW-TZ-oEu" secondAttribute="bottom" constant="50" id="hwz-yz-gA8"/>
                             <constraint firstItem="WMP-VF-t6K" firstAttribute="top" secondItem="FvT-Ed-jsy" secondAttribute="bottom" constant="10" id="jUS-ZZ-ifn"/>
                             <constraint firstItem="zpC-oC-RGG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kl6-av-6vE"/>
                             <constraint firstItem="JLa-O3-SM0" firstAttribute="trailing" secondItem="pWS-2h-OhE" secondAttribute="trailing" id="mNw-mE-o5X"/>
                             <constraint firstItem="WMP-VF-t6K" firstAttribute="leading" secondItem="sqk-yb-DgR" secondAttribute="leading" id="mYH-Lh-wuV"/>
-                            <constraint firstItem="GNW-TZ-oEu" firstAttribute="leading" secondItem="sqk-yb-DgR" secondAttribute="leading" id="tBS-c7-sSV"/>
-                            <constraint firstItem="GNW-TZ-oEu" firstAttribute="top" secondItem="yBh-dU-laB" secondAttribute="bottom" constant="10" id="uoy-jZ-J8H"/>
                             <constraint firstItem="5V6-PN-1AZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="134" id="v1m-Hl-rU0"/>
                             <constraint firstItem="yBh-dU-laB" firstAttribute="top" secondItem="sqk-yb-DgR" secondAttribute="bottom" constant="10" id="vYt-Mi-bCn"/>
                             <constraint firstItem="FvT-Ed-jsy" firstAttribute="top" secondItem="5V6-PN-1AZ" secondAttribute="bottom" constant="50" id="wva-YS-ryP"/>
